fix: design feedbacks, links alignment on register page

--- a/front/src/containers/auth/auth.css
+++ b/front/src/containers/auth/auth.css
@@ -28,6 +28,14 @@
   font-family: "FiraGo";
 }
 
+.register_secondary_links {
+  display: flex;
+}
+
+.register_secondary_links > div {
+  flex: 1;
+}
+
 @media only screen and (max-width: 767px) {
   #auth {
     width: 100%;
